[Fix] 전체 게시글 조회 수정